Specified Map link, updated font to hopefully fix on firefox

--- a/inter.css
+++ b/inter.css
@@ -1,5 +1,5 @@
 @import url('https://rsms.me/inter/inter.css');
-body { font-family: 'Inter', sans-serif; }
+body { font-family: 'Inter', sans-serif !important; }
 @supports (font-variation-settings: normal) {
   body { font-family: 'Inter var', sans-serif; }
 }
